Sidebar overflow error fixed.

--- a/sandbox/bubble_meteor/client/stylesheets/style.styl
+++ b/sandbox/bubble_meteor/client/stylesheets/style.styl
@@ -2184,6 +2184,7 @@ navbar-height        =  60px
       .heading,
       .btn-nav
         padding            0 15px
+        overflow           hidden
       .heading
         border-bottom      1px solid #89A5B8
         height             60px
